--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,17 @@ body {
     background-color: #343a3f !important;
     border: solid 1px #4b545b !important;
 }
+
+@keyframes animate {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.2);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
